Prepare site for consumer launch
